# anchor-token-staking-master

./: Anchor.toml  package-lock.json
programs/xToken-Stake/: Cargo.toml
programs/xToken-Stake/src/: constant.rs  lib.rs  state.rs  util.rs
programs/xToken-Stake/src/instructions/: claim.rs  close_user.rs  close_vault.rs  control_funder.rs  create_user.rs  create_vault.rs  fund.rs  mod.rs  stake.rs  unstake.rs
tests/: xToken-Stake.ts
tests/fixtures/: lib.ts  mint.ts  token-account.ts  token-wallet.ts  vault.ts
